--- a/frontend/src/assets/css/App.css
+++ b/frontend/src/assets/css/App.css
@@ -1,10 +1,11 @@
 /* Global */
-html, body {
+html,
+body {
   height: 100vh;
   margin: 0;
   padding: 0;
-  background: url('../images/background.avif') no-repeat center center;
-  background-size:100%;
+  background: url('../images/background.avif') no-repeat center center fixed;
+  background-size: cover;
   color: #c9d1d9;
   font-family: 'Arial', sans-serif;
   line-height: 1.6;
@@ -43,7 +44,9 @@ button.btn-outline:hover {
 }
 
 /* Global Headings */
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   font-family: 'Georgia', serif;
   color: #58a6ff;
 }
